fixed x-axis scrollbar

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   background-color: #fae9ee;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 .title {
